Mobile: Fix transparent Project titles on Safari

--- a/assets/scss/_3-theme.scss
+++ b/assets/scss/_3-theme.scss
@@ -749,7 +749,6 @@ body[data-template=work] {
 		.single-project {
 			position: relative;
 			z-index: 0;
-			background-color: $color-white;
 			&:hover {
 				a {
 					p, span {
